Fixed breadcrumb visibility and Learner Course Activities breadcrumb issue

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -758,9 +758,6 @@ html[lang=es] .local-edwiserreports {
     [role="main"] {
         position: relative;
     }
-    .breadcrumb {
-        display: none;
-    }
     #customReportBlock {
         table {
             td {
